# WebRTCTranscribe

./: .env.example  .gitignore  README.md  pyproject.toml
src/telemost_transcribe/: __init__.py  __main__.py  cli.py  config.py
src/telemost_transcribe/browser/: __init__.py  telemost.py
src/telemost_transcribe/browser/js/: rtc_interceptor.js
src/telemost_transcribe/transcription/: __init__.py  formatter.py  groq_transcriber.py
