[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemost-transcribe"
version = "0.1.0"
description = "CLI tool to record and transcribe Yandex Telemost video calls"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Developer" }
]
dependencies = [
    "playwright>=1.40.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
telemost-transcribe = "telemost_transcribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telemost_transcribe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
